<resources>
    <string name="app_name">Zadanie_domowe</string>
    <string name="task_description">task_description</string>
    <string name="task_title">task_title</string>
    <string name="default_description">default_description</string>
    <string name="default_title">task_title </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="undo_dialog">cancel </string>
    <string name="comfirmed"> confirm</string>
    <string name="delete_message"> Delete ? </string>
    <string name="call_callactivity">call</string>
    <string name="yes_callActivity">yes</string>
    <string name="no_callActivity">no</string>
    <string name="Phone_number">Phone_number </string>
    <string name="Birthday">Birthday</string>
    <string name="Surname">Surname </string>
    <string name="Name">Name </string>
    <string name="add">ADD</string>
    <string name="Name__and_Surname">Kontakt Info</string>
    <string name="Phone_landscape">Phone</string>
    <string name="Birthday_landspace">Birthday</string>
    <string name="item_choice">info</string>
    <string name="long_click_msg" />
    <string name="empty_name">empty_name</string>
    <string name="empty_surname">empty_surname</string>
    <string name="epmty_birthday">epmty_birthday</string>
    <string name="empty_phone">empty_phone</string>
    <string name="calling">calling</string>
    <string name="delete">delete</string>
    <string name="delete_cancel">delete_cancel</string>
    <string name="yes_mainactivity">yes</string>
</resources>
