<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
   >


    <EditText
        android:id="@+id/KontaktName"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_margin="16dp"
        android:layout_marginTop="16dp"
        android:hint="@string/Name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/KontaktSurname"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_margin="16dp"
        android:hint="@string/Surname"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/KontaktName" />

    <EditText
        android:id="@+id/KontaktBirthday"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_margin="16dp"
        android:layout_marginTop="8dp"
        android:hint="@string/Birthday"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/KontaktSurname" />

    <EditText
        android:id="@+id/KontaktPhone"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_margin="16dp"
        android:layout_marginTop="12dp"
        android:hint="@string/Phone_number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/KontaktBirthday" />

    <Button
        android:id="@+id/addButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/add"
        android:onClick="addClick"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/KontaktPhone"
        app:layout_constraintVertical_bias="0.131" />

</androidx.constraintlayout.widget.ConstraintLayout>